@@ -40,15 +40,19 @@
 
 
 	<ul><h2>Tools</h2>
-		<h3>Web Tools<span class=light> Powered by JavaScript.</span></h3>
-		<li><a href="http://www.biomooc.com/index2.html">Navigator</a> Short cuts for bioinformatics.</li>
+		<h3>Web Tools <span class=light>Powered by JavaScript.</span></h3>
+		<li><a href="http://www.biomooc.com/index2.html">Navigator</a> Short cuts for bioinformatics from
+			<a href="http://www.biomooc.com">BioMooc</a>.
+		</li>
 		<li><a href="tool/transphage.html">TransPhage</a> A tool for Translating peptide from phage display[Ph.Dc7c,Ph.D7,Ph.D12].</li>
 		<li><a href="tool/revCom.html">revCom</a> A tool for DNA translation, reverse complement.</li>
 
 		<li><a href="JavaScript/mathJax_demo.html">LaTeX Math Preview</a> to preview LaTeX Math expression, based on MathJax.js</li>
-		
-		
-		<b>Local server:</b>
+		<li><a href="JavaScript/aminoAcid_Formater.html">Amino Acid Formater</a> Format amino acid sequence to patent style</li>
+
+
+
+		<h3>Local Server <span class=light>Powered by JavaScript.</span></h3>
 		<li><a href="JavaScript/code_reader.html">Code Reader</a> to preview R or Python code on server with some highlight by prism.js.</li>
 		<li><a href="JavaScript/markdownReader/index_md.html">Markdown Reader</a> to view Markdown files using js only.</li>
 
@@ -66,9 +70,9 @@
 
 
 
-	<ul><h2>Blog System</h2>
-		<li><a target="_blank" href="https://github.com/BioMooc/txtBlog.py">txtBlog.py</a> for txt files at localhost <span class=light>Powered by Python3.6</span></li>
-		<li><a target="_blank" href="https://github.com/DawnEve/StackNote">StackNote</a> for markdown files at localhost <span class=light>Powered by JavaScript/Vue3</span></li>
+	<ul><h2>Note System</h2>
+		<li><a target="_blank" href="https://github.com/BioMooc/txtBlog.py">txtBlog.py</a> for reading and organizing txt/Markdown/html files at localhost <span class=light>Powered by Python3.6</span></li>
+		<li><a target="_blank" href="https://github.com/DawnEve/StackNote">StackNote</a> for writing and reading memos of papar in Markdown at localhost <span class=light>Powered by JavaScript/Vue3</span></li>
 	<!--
 		<li><a href="http://agetouch.blog.163.com/">ageTouch</a> My bioinfo blog.</li>
 		<li><a href="http://tigomall.blog.163.com/">tigoMall</a> My experi blog.</li>
